fixing an issue with pseudo element to prevent fixed header covering the section top

--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ a {
 } 
 
 /* pseudo element to ensure the anchor tag goes to top of section (as fixed header was blocking this before): */
-#about, #portfolio, #contact, #mayden_logo, #pilot_shop::before { 
+#about::before, #portfolio::before, #contact::before, #mayden_logo::before, #pilot_shop::before { 
 	display: block; 
 	content: " "; 
 	margin-top: -120px; 
